aligned and styled about section, need to add scroll on animation #issue with home page navbar

--- a/saad-portfolio/src/components/navbar.module.css
+++ b/saad-portfolio/src/components/navbar.module.css
@@ -12,6 +12,7 @@ could be cool if it was in the hero section?*/
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(201, 178, 250, 0.3);
+    z-index: 9999;
 }
 
 .navList {
